add tenant and api version info to setup
