# out/openapi_server/models/__init__.py
@@ -3,4 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from openapi_server.models.bad_request_error import BadRequestError
 from openapi_server.models.fruit import Fruit
+from openapi_server.models.fruit_id import FruitId
+from openapi_server.models.not_found_error import NotFoundError
