# out/openapi_server/models/bad_request_error.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class BadRequestError(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, message=None):  # noqa: E501
+        """BadRequestError - a model defined in OpenAPI
+
+        :param message: The message of this BadRequestError.  # noqa: E501
+        :type message: str
+        """
+        self.openapi_types = {
+            'message': str
+        }
+
+        self.attribute_map = {
+            'message': 'message'
+        }
+
+        self._message = message
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'BadRequestError':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The BadRequestError of this BadRequestError.  # noqa: E501
+        :rtype: BadRequestError
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def message(self):
+        """Gets the message of this BadRequestError.
+
+        Human readable error message  # noqa: E501
+
+        :return: The message of this BadRequestError.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message):
+        """Sets the message of this BadRequestError.
+
+        Human readable error message  # noqa: E501
+
+        :param message: The message of this BadRequestError.
+        :type message: str
+        """
+
+        self._message = message
