# out/openapi_server/models/fruit_id.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class FruitId(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id=None):  # noqa: E501
+        """FruitId - a model defined in OpenAPI
+
+        :param id: The id of this FruitId.  # noqa: E501
+        :type id: str
+        """
+        self.openapi_types = {
+            'id': str
+        }
+
+        self.attribute_map = {
+            'id': 'id'
+        }
+
+        self._id = id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'FruitId':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The FruitId of this FruitId.  # noqa: E501
+        :rtype: FruitId
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self):
+        """Gets the id of this FruitId.
+
+        Unique ID of the fruit  # noqa: E501
+
+        :return: The id of this FruitId.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id):
+        """Sets the id of this FruitId.
+
+        Unique ID of the fruit  # noqa: E501
+
+        :param id: The id of this FruitId.
+        :type id: str
+        """
+
+        self._id = id
